--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
-body {
+ h3{
+color: #CEE5F2;
+text-decoration: overline underline 3px #CEE5F2;
+letter-spacing: 3px;
+font-size: 30px;
+text-shadow: 2px 2px #1D263B;
+}
 
+body{
+  background-color: #78AACE
+}
+
+img{
+  border-radius: 70px;
+}
+
+img:hover{
+  width: 900px;
+  border: dotted #CEE5F2;
+  border-radius: 70px
+}
+
+h3:hover{
+  color: #1D263B;
+  text-decoration: overline underline dotted;
+  font-size: 300%;
+  text-transform: uppercase;
+  text-shadow: 2px 2px #CEE5F2;
 }
